# coppafisher

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  ;  LICENSE.md  README.md  ]  changelog.txt  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements-torch.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  improvement.md  new-feature.md
.github/workflows/: docs_deploy.yaml  draft-release.yaml  integration-julia.yaml  integration.yaml  pre-commit.yaml  version-bump-check.yaml
advanced_usage/: index.html
basic_usage/: index.html
call_spots/: index.html
contributing/: index.html
coppafish/: __init__.py  __main__.py
coppafish/call_spots/: background.py  base.py  dot_product.py  qual_check.py
coppafish/compatibility/: __init__.py  base.py
coppafish/docs/: compatibility_tracker_stage_names.py  compatibility_tracker_start_from.py  estimate_runtime.py  export_to_pciseq_0.py  export_to_pciseq_1.py  generate_gene_codes.py  nb_delete_page_0.py  nb_delete_page_1.py  omp_min_intensity.py  retrieve_notebook_config.py  run_pipeline_0.py
coppafish/extract/: __init__.py  nd2.py  raw.py  raw_jobs.py  raw_nd2.py  raw_numpy.py  raw_reader.py
coppafish/filter/: base.py  deconvolution.py
coppafish/find_spots/: __init__.py  base.py  check_spots.py  detect.py
coppafish/log/: __init__.py  base.py
coppafish/omp/: base.py  coefs.py  duplicates.py  pixel_scores.py  scores.py  scores_torch.py  spots.py  spots_torch.py
coppafish/pciseq/: __init__.py  base.py
coppafish/pdf/: base.py
coppafish/pipeline/: basic_info.py  call_reference_spots.py  extract_run.py  filter_run.py  find_spots.py  get_reference_spots.py  omp_torch.py  register.py  run.py  stitch.py
coppafish/plot/: __init__.py  extract.py  filter.py  find_spots.py  intensity.py  raw.py
coppafish/register/: base.py  preprocessing.py
coppafish/results/: pciseq.py
coppafish/robominnie/: robominnie.py
coppafish/setup/: config.py  config_new.py  config_section.py  default.ini  file_names.py  notebook.py  notebook_page.py  settings.default.ini  tile_details.py
coppafish/spot_colours/: __init__.py  base.py
coppafish/stitch/: base.py
coppafish/utils/: __init__.py  base.py  errors.py  indexing.py  nd2.py  pciseq.py  raw.py  spot_images.py  system.py  tiles_io.py  version.py
coppafisher/: __init__.py  __main__.py  julia_dependency_install.jl  run_tests.jl
coppafisher/call_spots/: base.py  dot_product.py  qual_check.py
coppafisher/compatibility/: base.py
coppafisher/custom_alignment/: __init__.py  base.py  postprocessing.py
coppafisher/docs/: compatibility_tracker_stage_names.py  compatibility_tracker_start_from.py  create_metadata.py  docstring_example.py  estimate_runtime.py  export_dapi_to_pciseq.py  export_to_pciseq_0.py  export_to_pciseq_1.py  export_unfiltered_dapi_to_pciseq.py  generate_gene_codes.py  nb_delete_page_0.py  nb_delete_page_1.py  omp_intensity_histogram.py  omp_min_intensity.py  open_viewer_0.py  open_viewer_1.py  prune_notebook.py  retrieve_notebook_config.py  run_pipeline_0.py  update_tile_dir.py  zip_nb.py  zip_nb_2.py
coppafisher/extract/: __init__.py  base.py  nd2.py  raw_jobs.py  raw_nd2.py  raw_numpy.py  raw_reader.py  raw_tif.py
coppafisher/filter/: base.py  radius_normalisation.py
coppafisher/find_spots/: base.py  check_spots.py  detect.jl  detect.py  detect_io.jl  detect_julia.py
coppafisher/if_alignment/: __init__.py  base.py  preprocessing.py  subvol_registration.py
coppafisher/log/: __init__.py  base.py
coppafisher/omp/: base.py  discriminality.py  mean_spot.npy  pixel_scores.py  scores.py
coppafisher/pdf/: base.py
coppafisher/pipeline/: basic_info.py  call_reference_spots.py  extract_run.py  filter_run.py  find_spots.py  get_reference_spots.py  omp_torch.py  register.py  run.py  stitch.py
coppafisher/plot/: __init__.py  _histogram.py  extract.py  filter.py  find_spots.py  intensity.py  spot_colours.py
coppafisher/register/: base.py  preprocessing.py
coppafisher/results/: __init__.py  base.py  cell_mask.py  pciseq.py
coppafisher/robominnie/: robominnie.py
coppafisher/setup/: config.py  dapi_channel_normalisations.npz  default.ini  default_psf.npz  file_names.py  nine_channel_normalisations.npz  notebook.py  notebook_page.py  seven_channel_normalisations.npz  tile_details.py
coppafisher/spot_colours/: base.py
coppafisher/stitch/: base.py
coppafisher/test/: test_version.py
coppafisher/utils/: __init__.py  affine.py  base.py  bits.py  cli.py  dict_io.py  dimensions.py  duplicates.py  errors.py  indexing.py  intensity.py  julia.py  markers.py  polygon2d.py  system.py  web.py  zarray.py
css/: extra.css
diagnostics/: index.html
docs/: advanced_usage.md  basic_usage.md  call_spots.md  contributing.md  diagnostics.md  export.md  find_spots.md  glossary.md  homepage.md  index.md  migration.md  omp.md  overview.md  register.md  stitch.md  troubleshoot.md
export/: index.html
find_spots/: index.html
glossary/: index.html
migration/: index.html
omp/: index.html
overview/: index.html
register/: index.html
search/: search_index.json
stitch/: index.html
test.zarray/: .zarray
tests/: test_version.py
troubleshoot/: index.html
(+162 files in other folders)
