[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "coppafisher"
version = "1.5.1"
description = "coppaFISH software for Python"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Josh Duffield", email = "jduffield65@gmail.com"},
]
maintainers = [
    {name = "Paul Shuker", email = "paul.shuker@outlook.com"},
]
dependencies = [
    "dash",
    "dask",
    "joblib",
    "matplotlib",
    "mplcursors",
    "napari[pyqt5]>=0.6.0",
    "nd2",
    "numpy<2.1",
    "pandas",
    "plyer",
    "psutil",
    "plotly",
    "PyQt5",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "tabulate",
    "torch>=2",
    "tqdm",
    "zarr<3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Unix",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://paulshuker.github.io/coppafisher/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Empty for default package discovery

[tool.setuptools.package-data]
"coppafisher.setup" = [
    "default.ini",
    "default_psf.npz",
    "dye_info_raw.npy",
    "seven_channel_normalisations.npz",
    "nine_channel_normalisations.npz",
    "dapi_channel_normalisations.npz",
]
"coppafisher.omp" = ["mean_spot.npy"]
"coppafisher.plot.results_viewer" = ["cell_colour.csv", "cellClassColours.json", "gene_colour.csv"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
line_length = 120

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = [ "**/temp", "temp.py", "**/coppafisher/docs/*.py", "**/.integration_dir", "**/.notebook_test", "**/__pycache__", "**/build/lib" ]
select = [
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = ["E741", "B028", "B007"]

[tool.pyright]
exclude = [ "**/temp", "temp.py", "**/coppafisher/docs/*.py", "**/.integration_dir", "**/.notebook_test", "**/__pycache__", "**/build/lib" ]
typeCheckingMode = "off"
